objects/RevenueScheduleItem__c.object
<CustomObject>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Revenue Schedule</relationshipLabel>
        <relationshipName>Revenue_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Schedule Item</label>
    <nameField>
        <displayFormat>RSI{000000}</displayFormat>
        <label>Revenue Schedule Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>